[project]
name = "real_data_google_forms_event_automation"
version = "0.1.0"
description = "real_data_google_forms_event_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0"
]

[project.scripts]
real_data_google_forms_event_automation = "real_data_google_forms_event_automation.main:run"
run_crew = "real_data_google_forms_event_automation.main:run"
train = "real_data_google_forms_event_automation.main:train"
replay = "real_data_google_forms_event_automation.main:replay"
test = "real_data_google_forms_event_automation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
